# CPPfunStuff

./: CMakeLists.txt  LUdecompose.cpp  LUdecompose.h  QRdecompose.cpp  QRdecompose.h  backWardSubstitution.cpp  backWardSubstitution.h  main.cpp  multiplyMatrices.cpp  multiplyMatrices.h  upTriangMat.cpp  upTriangMat.h
